presets and align right fixed for simple layout

--- a/src/css/view/product-grid.scss
+++ b/src/css/view/product-grid.scss
@@ -126,30 +126,30 @@
                     }
 
                     // onsale
-                    .onsale {
-                        display: block;
-                        line-height: 170px;
-                        font-size: 13px;
-                        text-align: center;
-                        letter-spacing: 0;
-                        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.6);
-                        text-transform: uppercase;
-                        color: #fff;
-                        background-color: #ff2a13;
-                        border-radius: 0;
-                        border: none;
-                        box-shadow: none;
-                        position: absolute;
-                        height: 100px;
-                        width: 200px;
-                        z-index: 1;
-                        left: -100px;
-                        top: -50px;
-                        right: auto;
-                        margin: 0;
-                        padding: 0;
-                        transform: rotate(-45deg);
-                    }
+                    // .onsale {
+                    //     display: block;
+                    //     line-height: 170px;
+                    //     font-size: 13px;
+                    //     text-align: center;
+                    //     letter-spacing: 0;
+                    //     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.6);
+                    //     text-transform: uppercase;
+                    //     color: #fff;
+                    //     background-color: #ff2a13;
+                    //     border-radius: 0;
+                    //     border: none;
+                    //     box-shadow: none;
+                    //     position: absolute;
+                    //     height: 100px;
+                    //     width: 200px;
+                    //     z-index: 1;
+                    //     left: -100px;
+                    //     top: -50px;
+                    //     right: auto;
+                    //     margin: 0;
+                    //     padding: 0;
+                    //     transform: rotate(-45deg);
+                    // }
 
                     .price {
                         font-size: 14px;
@@ -684,6 +684,137 @@
                 background-color: #ff7a80;
                 color: #fff;
                 z-index: 9;
+
+                &.sale-preset-1 {
+
+                    br {
+                        display: none;
+                    }
+
+                    &.right {
+                        left: auto;
+                        right: 0;
+                    }
+                }
+
+                &.sale-preset-2 {
+                    padding: 0;
+                    top: 5px;
+                    left: 5px;
+                    display: inline-table;
+                    min-width: 50px;
+                    min-height: 50px;
+                    line-height: 50px;
+                    border-radius: 100%;
+                    -webkit-font-smoothing: antialiased;
+
+                    line-height: normal;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    &.right {
+                        left: auto;
+                        right: 5px;
+                    }
+                }
+
+                &.sale-preset-3 {
+                    border-radius: 50px;
+                    left: 15px;
+                    top: 15px;
+
+                    br {
+                        display: none;
+                    }
+
+                    &.right {
+                        left: auto;
+                        right: 15px;
+                    }
+                }
+
+                &.sale-preset-4 {
+                    left: 0;
+                    top: 15px;
+
+                    br {
+                        display: none;
+                    }
+
+                    &:after {
+                        position: absolute;
+                        right: -15px;
+                        bottom: 0px;
+                        width: 15px;
+                        height: 24px;
+                        border-top: 12px solid transparent;
+                        border-bottom: 12px solid transparent;
+                        border-left: 10px solid #23a454;
+                        content: '';
+                        border-right-color: #ff2a13;
+                        border-left-color: #ff2a13;
+                    }
+
+                    &.right {
+                        left: auto;
+                        right: 0;
+
+                        &:after {
+                            right: auto;
+                            left: -15px;
+                            border-left: 0;
+                            border-right: 10px solid #23a454;
+                            border-right-color: #ff2a13;
+                            border-left-color: #ff2a13;
+                        }
+                    }
+                }
+
+                &.sale-preset-5 {
+                    display: block;
+                    line-height: 74px;
+                    height: 60px;
+                    width: 120px;
+                    left: -39px;
+                    top: -10px;
+                    right: auto;
+                    padding: 0;
+                    transform: rotate(-45deg);
+
+                    line-height: normal;
+                    padding-top: 12px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    br {
+                        display: none;
+                    }
+
+                    &.right {
+                        left: auto;
+                        right: -35px;
+                        transform: rotate(45deg);
+                    }
+                }
+
+            }
+
+            .onsale {
+                padding: 5px 10px;
+                font-size: 13px;
+                font-weight: 500;
+                position: absolute;
+                text-align: center;
+                line-height: 1.2em;
+                top: 30px;
+                left: 0;
+                margin: 0;
+                background-color: #ff7a80;
+                color: #fff;
+                z-index: 9;
+                border-radius: 0;
 
                 &.sale-preset-1 {
 
